--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
     <div class="mytitle">
         <h1>
-            내 생애 최고의 영화들
+            내 생애 최고의 영화들!!!
         </h1>
         <button>
             영화 기록하기
